Add url to config

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Visuatics
 email: arnoud.beerepoot@gmail.com
 description: Visuatics is a place where data, science, analytics and visuals come together
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "Blog-website" # the subpath of your site, e.g. /blog
+url: "https://arnoudbeerepoot.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: ""
 github_username:  "arnoudbeerepoot"
 
